[project]
name = "thoughtful-ai-agent"
version = "0.1.0"
description = "Customer support AI Agent for Thoughtful AI"
authors = [
    {name = "Developer"}
]
readme = "README.md"
requires-python = ">=3.12.1"
dependencies = [
    "streamlit (>=1.47.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
